before adding user status package

--- a/client/googlecal.html
+++ b/client/googlecal.html
@@ -10,22 +10,15 @@
 </body>
 
 <template name="hello">
-    {{> loginButtons}}
+    
     <button id="googlelogin">Login with Google</button>
+    <button id="googlelogout">Logout</button>
     <span>Authorize access to Google Calendar API</span>
-
-    <p>You've pressed the button {{counter}} times.</p>
     <div id="authorize-div" style="display: none">
         <p>authorized</p>
     </div>
     {{#each calendarEvents}}
         {{> calEvent}}
-    {{/each}}
-</template>
-<template name="calendar">
-    <p>{{summary}}</p>
-    {{#each this.events}}
-        {{>event}}
     {{/each}}
 </template>
 <template name="event">
