integrated userstatus, can now detect idle or not

--- a/client/googlecal.html
+++ b/client/googlecal.html
@@ -13,6 +13,8 @@
     
     <button id="googlelogin">Login with Google</button>
     <button id="googlelogout">Logout</button>
+    <button id="monitorstart">Start monitoring</button>
+    <button id="monitorstop">Stop monitoring</button>
     <span>Authorize access to Google Calendar API</span>
     <div id="authorize-div" style="display: none">
         <p>authorized</p>
